styles.css
h1 {
  color: rgb(103, 153, 239);
  font-family: sans-serif;
  text-align: center;
  margin: 12px;
}
p {
  color: rgb(30, 28, 28);
  font-family: sans-serif;
  text-align: center;
}
p#main_para {
  /* jo bhi p element with id "main_para" wo sb select honge 
     p #main_para iska mtlb hota ki p element ke andar koi bhi element with id "main_para" wo select honge
  */
  color: rgb(30, 28, 28);
  font-family: "Tirra", sans-serif;
  text-align: center;
  font-weight: bold;
  font-size: 52px;
  padding: 12px;
  margin: 12px;
}
a {
  color: rgb(47, 119, 244);
  font-family: sans-serif;
  text-align: center;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
div#main_heading_container {
  display: flex;
  justify-content: center;
  align-items: center;
}
img#fire_emoji_img {
  width: 50px;
}

